--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Josafat Flores",
-  "name": "Portfolio Josafat Flores Dev",
+  "short_name": "Josafat Flores Desarrollador iOS",
+  "name": "Portfolio de desarrollador movil Josafat Flores",
   "icons": [
     {
       "src": "favicon.ico",
