--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "firebase": "^8.6.1",
-    "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
     "react-text-transition": "^1.3.0",
+    "sass": "^1.40.0",
+    "swiper": "^6.7.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
