--- a/package.json
+++ b/package.json
@@ -7,17 +7,21 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "animate.css": "^4.1.1",
+    "bootstrap": "^5.1.0",
     "firebase": "^8.6.1",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
     "react-dom": "^17.0.2",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
     "react-text-transition": "^1.3.0",
     "sass": "^1.40.0",
     "swiper": "^6.7.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "wowjs": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
